placeholder instead value

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
          <h1>На господинь:</h1>
       </div>
       <div id="calculator">
-         <span id="words">З </span><input id="howMuch" type="number" value="0"><span id="words"> фіців</span>
+         <span id="words">З </span><input id="howMuch" type="number" placeholder="0"><span id="words"> фіців</span>
          <div>
             <button id="calculatorButton" onclick="count()">Розрахувати</button>
          </div>
@@ -31,7 +31,7 @@
          <h1>Конвертатор<br/>ТовароОбігу</h1>
       </div>
       <div id="convertor">
-         <input id="convertorHowMuch" type="number" value="0">
+         <input id="convertorHowMuch" type="number" placeholder="0">
          <div>
             <button id="convertorButton" onclick="convert()">⇄</button>
          </div>
