add styles: shadow, responsive

--- a/index.html
+++ b/index.html
@@ -11,41 +11,47 @@
    <title>Waiter Tools</title>
 </head>
 <body>
-   <div id="calculatorContainer">
-      <div id="calculatorTitle">
-         <h1>На господинь:</h1>
-      </div>
-      <div id="calculator">
-         <span id="words">З </span><input id="howMuch" type="number" placeholder="0"><span id="words"> фіців</span>
-         <div>
-            <button id="calculatorButton" onclick="count()">Розрахувати</button>
+   <div id="main">
+      <div id="calculatorContainer">
+         <div id="calculatorTitle">
+            <h1>На господинь:</h1>
          </div>
-      </div>
-      <div id="calculatorResult">
-         <span id="resultNum">0.00</span><span id="resultWrd"> грн</span>
-      </div>
-   </div>
-   <hr>
-   <div id="convertorContainer">
-      <div id="conventorTitle">
-         <h1>Конвертатор<br/>ТовароОбігу</h1>
-      </div>
-      <div id="convertor">
-         <input id="convertorHowMuch" type="number" placeholder="0">
-         <div>
-            <button id="convertorButton" onclick="convert()">⇄</button>
+         <div id="calculator">
+            <span id="words">З </span><input id="howMuch" type="number" placeholder="0"><span id="words"> фіців</span>
+            <div>
+               <button id="calculatorButton" onclick="count()">Розрахувати</button>
+            </div>
          </div>
-      </div>
-      <div id="convertorResult">
-         <span id="convertorResultNum">0.00</span><span id="convertorResWrd"> грн</span>
+         <div id="calculatorResult">
+            <span id="resultNum">0.00</span><span id="resultWrd"> грн</span>
+         </div>
       </div>
       <hr>
-      <div id="jars">
-         <h1>Банки:</h1>
-         <div id="Death"><a href="https://send.monobank.ua/jar/83kMwShVbB">Смерть Русні</a></div>
-         <div id="Kitchen"><a href="https://send.monobank.ua/jar/A16UrC2X5w">Кухня / Кондитери</a></div>
-         <div id="Bar"><a href="https://send.monobank.ua/44tm2c3wn">Бар / Каса</a></div>
-         <div id="Runner"><a href="https://send.monobank.ua/6UpwM2ETT4">Ранер</a></div>
+      <div id="convertorContainer">
+         <div id="conventorTitle">
+            <h1>Конвертатор<br/>ТовароОбігу</h1>
+         </div>
+         <div id="convertor">
+            <input id="convertorHowMuch" type="number" placeholder="0">
+            <div>
+               <button id="convertorButton" onclick="convert()">⇄</button>
+            </div>
+         </div>
+         <div id="convertorResult">
+            <span id="convertorResultNum">0.00</span><span id="convertorResWrd"> грн</span>
+         </div>
+         <hr>
+         <div id="jars">
+            <h1>Банки:</h1>
+            <div id="Death"><a target="_blank" href="https://send.monobank.ua/jar/83kMwShVbB">⚰️ Смерть Русні ⚰️</a></div>
+            <div id="Kitchen"><a href="https://send.monobank.ua/jar/A16UrC2X5w">🥘 Кухня / Кондитери 🥐 </a></div>
+            <div id="Bar"><a href="https://send.monobank.ua/44tm2c3wn">☕ Бар / Каса 💸</a></div>
+            <div id="Runner"><a href="https://send.monobank.ua/6UpwM2ETT4">🏃‍♀️🏃‍♀️ Ранер 🏃‍♀️</a></div>
+      </div>
    </div>
+   </div>
+   <footer>
+      <span>by SVolovy4 on <a href="https://github.com/SVolowy4?tab=repositories">gitHub</a></span>
+   </footer>
 </body>
 </html>
