--- a/index.html
+++ b/index.html
@@ -54,7 +54,11 @@
             <div id="Runner">
                 <span>Ранерам по  
                 <span id="convertorResultR">0.00</span>
-            <span id="convertorResWrd"> грн</span>
+            <span id="convertorResWrd"> грн -</span>
+                </span>
+                <span id="convertorResWrd"> (X2) <span id="convertorResultRx2">
+                    0
+                </span>
                 </span>
             </div>
             <div id="Hostes">
