--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
                 <span id="convertorResultR">0.00</span>
             <span id="convertorResWrd"> грн -</span>
                 </span>
-                <span id="convertorResWrd"> (X2)<span id="convertorResWrd"> грн</span> <span id="convertorResultRx2">
-                    0
+                <span id="convertorResWrd"> (X2) <span id="convertorResultRx2">
+                    0<span id="convertorResWrd"> грн</span>
                 </span>
                 </span>
             </div>
