--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <span id="convertorResWrd"> грн -</span>
                 </span>
                 <span id="convertorResWrd"> (X2) <span id="convertorResultRx2">
-                    0<span id="convertorResWrd"> грн</span>
+                    0
                 </span>
+<span id="convertorResWrd"> грн</span>
                 </span>
             </div>
             <div id="Hostes">
