Changed runners value

--- a/index.html
+++ b/index.html
@@ -52,12 +52,9 @@
             <span id="convertorResWrd"> грн</span>
             </div>
             <div id="Runner">
-                <span>Ранерам по  
+                <span>Кожному Ранеру по  
                 <span id="convertorResultR">0.00</span>
-            <span id="convertorResWrd"> грн -</span>
-                </span>
-                <span id="convertorResWrd">(X2) <span id="convertorResultRx2">0</span>
-<span id="convertorResWrd"> грн</span>
+            <span id="convertorResWrd"> грн </span>
                 </span>
             </div>
             <div id="Hostes">
