--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <span id="convertorResultB">0.00</span>
             <span id="convertorResWrd"> грн</span>
             </div>
+<div id="ofDay">
             <div id="Runner">
                 <span>Кожному Ранеру по  
                 <span id="convertorResultR">0.00</span>
@@ -63,6 +64,7 @@
             <span id="convertorResWrd"> грн</span>
                 </span>
             </div>
+</div>
    </div>
    <footer>
       <span>by SVolovy4 on <a href="https://github.com/SVolowy4?tab=repositories">gitHub</a></span>
