workDay for description

--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
             </div>
 </div>
    </div>
+            <span id="workDay">В будні дні хостес й ранери не працюють</span>
    <footer>
       <span>by SVolovy4 on <a href="https://github.com/SVolowy4?tab=repositories">gitHub</a></span>
    </footer>
