--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@
          <hr>
          <div id="jars">
             <h1>Банки:</h1>
-            <div id="Death"><a target="_blank" href="https://send.monobank.ua/jar/83kMwShVbB">⚰️ Смерть Русні</a>
+            <div id="Death"><a id ="deathAnchor "target="_blank" href="https://send.monobank.ua/jar/83kMwShVbB">⚰️ Смерть Русні</a>
             <span id="convertorResultZ">0.00</span>
             <span id="convertorResWrd"> грн</span>
             </div>
-            <div id="Kitchen"><a href="https://send.monobank.ua/jar/A16UrC2X5w">🥘 Кухня / Кондитери </a>
+            <div id="Kitchen"><a id= "kitchenAnchor" href="https://send.monobank.ua/jar/A16UrC2X5w">🥘 Кухня / Кондитери </a>
             <span id="convertorResultK">0.00</span>
             <span id="convertorResWrd"> грн</span>
             </div>
-            <div id="Bar"><a href="https://send.monobank.ua/44tm2c3wn">☕ Бар / Каса </a>
+            <div id="Bar"><a id="barAnchor" href="https://send.monobank.ua/44tm2c3wn">☕ Бар / Каса </a>
             <span id="convertorResultB">0.00</span>
             <span id="convertorResWrd"> грн</span>
             </div>
