title for tips is count total

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
    <title>Waiter Tools</title>
 </head>
 <body>
-      <div id="calculatorContainer">
-         <div id="calculatorTitle">
-            <h1>На господинь:</h1>
-         </div>
-         <div id="calculator">
-            <span id="words">З </span><input id="howMuch" type="number" placeholder="0"><span id="words"> фіців</span>
-            <div>
+      
+   <div id="calculatorContainer">
+     <div id="calculatorTitle">
+        <h1>На господинь:</h1>
+     </div>
+        <div id="calculator">
+<span id="words">З </span><input id="howMuch" type="number" placeholder="0"><span id="words"> фіців</span>
+           <div>
                <button id="calculatorButton" onclick="count()">Розрахувати</button>
             </div>
          </div>
@@ -38,7 +39,7 @@
          </div>
          <hr>
          <div id="jars">
-            <h1>Банки:</h1>
+        <h1>на банки / карти = <span id="total">0</span><span> грн</span></h1>
             <div id="Death"><a id ="deathAnchor "target="_blank" href="https://send.monobank.ua/jar/83kMwShVbB">⚰️ Смерть Русні</a>
             <span id="convertorResultZ">0.00</span>
             <span id="convertorResWrd"> грн</span>
