--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@
         <!--
             <span id="workDay">В будні дні хостес й ранери не працюють</span>
             -->
-          <button id="btnShow" onclick="showOfDay()">Якщо є ранери/хостес</button>
-          <button id="btnHide" onclick="hideOfDay()">Без ранерів/хостес</button>
+          <button id="btnShow" onclick="showOfDay()">↕️Якщо є ранери/хостес↕️</button>
+          <button id="btnHide" onclick="hideOfDay()">↕️Без ранерів/хостес↕️</button>
    </div>
   </div> 
   
