--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
           <div id="barBlock">
             
             <a id="barAnchor" 
-          href="https://send.monobank.ua/44tm2c3wn">☕ Бар / Каса 
+          href="https://send.monobank.ua/9qLk4HnKWM">☕ Бар / Каса 
             </a>
             
           </div>
