--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       <div id="convertorContainer">
     
     <div id="conventorTitle">
-      <h1>Конвертатор<br/>ТовароОбігу</h1>
+      <h1>Конвертор</h1>
     </div>
     
     <div id="calculator">
