--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           
           <div id="Runner">
             
-           <span>Ранерам по  
+           <span>Ранеру
             <span id="convertorResultR">0.00</span>
             <span id="convertorResWrd"> грн </span>
             </span>
@@ -161,8 +161,8 @@
         <!--
             <span id="workDay">В будні дні хостес й ранери не працюють</span>
             -->
-          <button id="btnShow" onclick="showOfDay()">↕️Якщо є ранери/хостес↕️</button>
-          <button id="btnHide" onclick="hideOfDay()">↕️Без ранерів/хостес↕️</button>
+          <button id="btnShow" onclick="showOfDay()">↕️Якщо є ранер/хостес↕️</button>
+          <button id="btnHide" onclick="hideOfDay()">↕️Без ранера/хостес↕️</button>
    </div>
   </div> 
   
