--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
           <div id="kitchenBlock">
             
             <a id="kitchenAnchor" 
-             href="https://send.monobank.ua/jar/A16UrC2X5w">🥘 Кухня / Кондитери 
+             href="https://send.monobank.ua/jar/9bBSCWEDDA">🥘 Кухня / Кондитери 
              </a>
           
           </div>
