--- a/index.html
+++ b/index.html
@@ -43,6 +43,9 @@
     </div>
     -->
    </div>
+   <a href="https://t.me/+cgbNeZkPAhE4ZmEy">
+     👉 до групи "Чайові Софія"
+   </a>
   </div>
  <footer>
    <a href="#one">Закинь на господинь</a>
