--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
     </div>
     -->
    </div>
-   <a href="https://t.me/+cgbNeZkPAhE4ZmEy">
+   <a
+     target="_blank"
+     href="https://t.me/+cgbNeZkPAhE4ZmEy">
      👉 до групи "Чайові Софія"
    </a>
   </div>
