--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
   <div id="calculatorResult">
     <span class="total" id="resultNum">0.00</span><span id="resultWrd"> грн</span>
   </div>
+  <div id="container">
+    
+  </div>
 </div>
 <h1 id="two">Конвертер</h1>
 <div class="container">
